<resources>
    <string name="app_name">Clint</string>
    <string name="clint_downloader_label">Clint Downloader</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="tabs">Tabs</string>
    <string name="tabs_section_normal">NORMAL TABS</string>
    <string name="tabs_section_incognito">INCOGNITO TABS</string>
    <string name="settings">Settings</string>
    <string name="settings_select_category">Select a category to see its settings</string>
    <string name="share_url">Share URL</string>
    <string name="downloading">Downloading\u2026</string>
    <string name="privacy_settings">Privacy &amp; Security</string>
    <string name="browser_settings">Browser</string>
    <string name="browser_settings_summary">Homepage, search, scripts, content blocker, and custom prompts</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_layout">Layout</string>
    <string name="pref_category_search">Search</string>
    <string name="pref_category_protection">Content Blocker</string>
    <string name="pref_category_navigation">Navigation</string>
    <string name="pref_category_language">Language</string>
    <string name="pref_category_shortcuts">Shortcuts</string>
    <string name="pref_category_tabs">Tabs</string>
    <string name="delete_inactive_tabs_title">Delete Inactive Tabs</string>
    <string name="delete_inactive_tabs_dialog_desc">Tabs you haven\'t opened for this long are closed automatically. The tab you\'re viewing and tabs from frameless shortcuts are never closed.</string>
    <string name="delete_inactive_tabs_summary_never">Never</string>
    <string name="delete_inactive_tabs_summary_1_day">After 1 day</string>
    <string name="delete_inactive_tabs_summary_1_week">After 1 week</string>
    <string name="delete_inactive_tabs_summary_1_month">After 1 month</string>
    <string name="frameless_shortcut_title">Frameless</string>
    <string name="frameless_shortcut_summary">Hide the search bar and bottom bar when a shortcut is opened from the home screen</string>
    <string name="shortcut_manager_title">Shortcut Manager</string>
    <string name="shortcut_manager_summary">View and manage the shortcuts you\'ve added to your home screen</string>
    <string name="shortcut_manager_empty">No shortcuts yet. Add one from the browser menu with Create a Shortcut.</string>
    <string name="shortcut_manager_settings_title">Shortcut settings</string>
    <string name="shortcut_manager_more_options">More options</string>
    <string name="shortcut_manager_delete_confirm_title">Delete shortcut?</string>
    <string name="shortcut_manager_delete_confirm_message">%1$s will be removed and stop working on your home screen. You can then remove its icon yourself.</string>
    <string name="shortcut_manager_disabled_message">This shortcut was deleted</string>
    <string name="shortcut_manager_search_hint">Search shortcuts…</string>
    <string name="shortcut_manager_no_results">No shortcuts match your search</string>
    <string name="shortcut_manager_created">Created %1$s</string>
    <string name="shortcut_manager_sort_by_created">Date Created</string>
    <string name="shortcut_manager_already_pinned">This shortcut is already on your home screen</string>
    <string name="shortcut_manager_url_hint">Shortcut URL</string>
    <string name="shortcut_manager_url_invalid">Enter a valid URL</string>
    <string name="shortcut_manager_unsaved_title">Unsaved changes</string>
    <string name="shortcut_manager_unsaved_message">Do you want to save your changes to this shortcut?</string>
    <string name="shortcut_manager_unsaved_discard">Discard</string>
    <string name="shortcut_manager_delete_selected_desc">Delete selected shortcuts</string>
    <plurals name="shortcut_manager_delete_selected_title">
        <item quantity="one">Delete shortcut?</item>
        <item quantity="other">Delete %1$d shortcuts?</item>
    </plurals>
    <plurals name="shortcut_manager_delete_selected_message">
        <item quantity="one">This shortcut will be removed and stop working on your home screen. You can then remove its icon yourself.</item>
        <item quantity="other">%1$d shortcuts will be removed and stop working on your home screen. You can then remove their icons yourself.</item>
    </plurals>
    <plurals name="shortcut_manager_deleted_count">
        <item quantity="one">Shortcut deleted</item>
        <item quantity="other">%1$d shortcuts deleted</item>
    </plurals>
    <string name="pref_category_custom_prompts">Custom Browser Prompts</string>
    <string name="custom_select_menus_title">Custom Select Menus</string>
    <string name="custom_select_menus_summary">Use Clint\'s custom picker for \"&lt;select&gt;\" dropdowns instead of the WebView default.</string>
    <string name="custom_js_dialogs_title">Custom JavaScript Dialogs</string>
    <string name="custom_js_dialogs_summary">Use Clint\'s custom dialogs for alert(), confirm(), and prompt() instead of the WebView default.</string>
    <string name="js_dialog_title">%1$s says</string>
    <string name="js_before_unload_title">Leave site?</string>
    <string name="js_before_unload_message">Changes you made may not be saved.</string>
    <string name="js_before_unload_stay">Stay</string>
    <string name="js_before_unload_leave">Leave</string>
    <string name="http_auth_title">Sign in</string>
    <string name="http_auth_sign_in">Sign in</string>
    <string name="http_auth_message">%1$s requires a username and password.</string>
    <string name="http_auth_username">Username</string>
    <string name="http_auth_password">Password</string>
    <string name="http_auth_insecure">This connection isn\'t secure. Your username and password could be seen by others.</string>
    <string name="http_auth_show_password">Show password</string>
    <string name="http_auth_hide_password">Hide password</string>
    <string name="ssl_warning_title">Your connection isn\'t private</string>
    <string name="ssl_warning_message">Attackers might be trying to steal your information from %1$s, such as passwords, messages, or credit card details.</string>
    <string name="ssl_warning_proceed">Proceed anyway</string>
    <string name="ssl_error_untrusted">The certificate was issued by an authority that isn\'t trusted.</string>
    <string name="ssl_error_expired">The certificate has expired.</string>
    <string name="ssl_error_id_mismatch">The certificate doesn\'t match this site\'s address.</string>
    <string name="ssl_error_not_yet_valid">The certificate isn\'t valid yet.</string>
    <string name="ssl_error_date_invalid">The certificate\'s dates are invalid.</string>
    <string name="ssl_error_invalid">The certificate is invalid.</string>
    <string name="custom_http_auth_title">Custom Login Dialogs</string>
    <string name="custom_http_auth_summary">Use Clint\'s sign-in dialog when a website asks for a username and password. When off, those sites won\'t load.</string>
    <string name="custom_ssl_warnings_title">Custom Security Warnings</string>
    <string name="custom_ssl_warnings_summary">Show Clint\'s warning when a website\'s security certificate has a problem, with the option to continue. When off, those sites are blocked.</string>
    <string name="privacy_settings_summary">Cookies, User-Agent, HTTPS, and history</string>
    <string name="javascript_enabled">Enable JavaScript</string>
    <string name="javascript_enabled_summary">Allow websites to execute JavaScript</string>
    <string name="block_third_party_cookies">Block third-party cookies</string>
    <string name="block_third_party_cookies_summary">Prevent cross-site cookie tracking</string>
    <string name="custom_user_agent">Use generic User-Agent</string>
    <string name="custom_user_agent_summary">Report as standard Chrome browser to reduce fingerprinting</string>
    <string name="search_engine">Search Engine</string>
    <string name="about">About</string>
    <string name="default_browser_title">Default Browser</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="look_and_feel_summary">Language, theme, layout, and navigation</string>
    <string name="pref_updates_title">Updates</string>
    <string name="download_settings_title">Downloads</string>
    <string name="pref_updates_summary">Check for updates, manage channel</string>
    <string name="check_update_on_launch_title">Check for updates on launch</string>
    <string name="check_update_on_launch_summary">Automatically check for a new version each time the app starts</string>
    <string name="skip_update_on_metered_title">Skip update check on launch when on mobile data or metered connection</string>
    <string name="skip_update_on_metered_summary">Don\u2019t check for updates on launch when using a metered or mobile data connection</string>
    <string name="check_for_updates_title">Check for updates</string>
    <string name="check_for_updates_summary">Check now for the latest stable or beta release</string>
    <string name="view_changelog_title">View Changelog</string>
    <string name="view_changelog_summary">See what\u2019s new in each release</string>
    <string name="beta_channel_title">Enrol in Beta</string>
    <string name="beta_channel_summary">Receive early access builds before they reach stable. May contain bugs.</string>
    <string name="debug_title">Debug &amp; Crash Reports</string>
    <string name="debug_summary">View crash logs and create bug reports</string>
    <string name="download_manual_fab_desc">Add download</string>
    <string name="download_menu_share">Share</string>
    <string name="download_menu_open_folder">Open folder</string>
    <string name="download_menu_redownload">Redownload</string>
    <string name="download_menu_redownload_options">Redownload with additional options</string>
    <string name="download_menu_remove">Remove</string>
    <string name="download_menu_copy_link">Copy download link</string>
    <string name="download_multi_options_desc">More options</string>
    <string name="action_open">Open</string>
    <string name="pref_misc_title">Miscellaneous</string>
    <string name="pref_misc_summary">Default browser and setup wizard</string>
    <string name="downloads_title">Downloads</string>
    <string name="downloads_search">Search</string>
    <string name="downloads_search_hint">Search downloads…</string>
    <string name="downloads_sort">Sort</string>
    <string name="downloads_more_options">More options</string>
    <string name="downloads_delete_selected_desc">Remove selected downloads</string>
    <string name="exit_confirmation_title">Exit Confirmation</string>
    <string name="data_saver_title">Data Saver</string>
    <string name="data_saver_summary">Blocks heavy content and asks sites for lighter pages to use less data</string>
    <string name="data_saver_settings_summary">Images, fonts, frames, video and more</string>
    <string name="data_saver_disable_images_title">Disable Images</string>
    <string name="data_saver_disable_images_summary">All images will not load</string>
    <string name="data_saver_disable_autoplay_title">Disable Autoplay</string>
    <string name="data_saver_disable_autoplay_summary">Videos and media will not play automatically. May not work on all websites</string>
    <string name="data_saver_cache_first_title">Reuse Saved Pages</string>
    <string name="data_saver_cache_first_summary">Revisited pages load from storage first to save data. Pull to refresh for the latest version</string>
    <string name="suggestion_icon_desc">Search suggestion</string>
    <string name="suggestion_fill_desc">Fill into search bar</string>
    <string name="history_delete_desc">Remove from history</string>
    <string name="suggestion_url_desc">Page URL</string>
</resources>