<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="pref_look_and_feel"
        app:title="@string/look_and_feel"
        app:summary="@string/look_and_feel_summary"
        app:icon="@drawable/ic_palette_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.LookAndFeelFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_browser"
        app:title="@string/browser_settings"
        app:summary="@string/browser_settings_summary"
        app:icon="@drawable/ic_explore_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.BrowserSettingsFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_privacy"
        app:title="@string/privacy_settings"
        app:summary="@string/privacy_settings_summary"
        app:icon="@drawable/ic_lock_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.PrivacySettingsFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_data_saver"
        app:title="@string/data_saver_title"
        app:summary="@string/data_saver_settings_summary"
        app:icon="@drawable/ic_data_saver_on_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.DataSaverFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_updates"
        app:title="@string/pref_updates_title"
        app:summary="@string/pref_updates_summary"
        app:icon="@drawable/ic_update_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.UpdateSettingsFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_misc"
        app:title="@string/pref_misc_title"
        app:summary="@string/pref_misc_summary"
        app:icon="@drawable/ic_tune_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.MiscFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_debug"
        app:title="@string/debug_title"
        app:summary="@string/debug_summary"
        app:icon="@drawable/ic_bug_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.crash.CrashReportFragment"
        app:singleLineTitle="false" />

    <Preference
        app:key="pref_about"
        app:title="@string/about"
        app:icon="@drawable/ic_info_24"
        app:iconTint="?attr/colorPrimary"
        app:fragment="com.jhaiian.clint.settings.fragments.AboutFragment"
        app:singleLineTitle="false" />

</PreferenceScreen>
