<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Updates">

        <SwitchPreferenceCompat
            app:key="check_update_on_launch"
            app:title="@string/check_update_on_launch_title"
            app:summary="@string/check_update_on_launch_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_refresh_24"
        app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            app:key="skip_update_on_metered"
            app:title="@string/skip_update_on_metered_title"
            app:summary="@string/skip_update_on_metered_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_wifi_24"
        app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

        <Preference
            app:key="check_for_updates"
            app:title="@string/check_for_updates_title"
            app:summary="@string/check_for_updates_summary"
            app:icon="@drawable/ic_update_24"
        app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

        <Preference
            app:key="view_changelog"
            app:title="@string/view_changelog_title"
            app:summary="@string/view_changelog_summary"
            app:icon="@drawable/ic_history_24"
        app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Channel">

        <SwitchPreferenceCompat
            app:key="beta_channel"
            app:title="@string/beta_channel_title"
            app:summary="@string/beta_channel_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_warning_24"
        app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>
