<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_search">

        <Preference
            app:key="search_engine"
            app:title="@string/search_engine"
            app:summary="DuckDuckGo"
            app:icon="@drawable/ic_search_24"
            app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/browser_settings">

        <SwitchPreferenceCompat
            app:key="javascript_enabled"
            app:title="@string/javascript_enabled"
            app:summary="@string/javascript_enabled_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_desktop_24"
            app:iconTint="?attr/colorPrimary"
            app:singleLineTitle="false" />

    </PreferenceCategory>

</PreferenceScreen>
